[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/reset_progress_confirmation.gd" type="Script" id=1]
[ext_resource path="res://animations/open_window.tres" type="Animation" id=2]
[ext_resource path="res://images/medium_popup.png" type="Texture" id=3]
[ext_resource path="res://fonts/message_smaller.font" type="BitmapFont" id=4]
[ext_resource path="res://images/ok_button.png" type="Texture" id=5]
[ext_resource path="res://images/ok_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://images/cancel_button.png" type="Texture" id=7]
[ext_resource path="res://images/cancel_button_pressed.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource_name = "close"
length = 0.15
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("window:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="reset_progress_confirmation" type="Node2D"]

pause_mode = 2
script = ExtResource( 1 )

[node name="animation" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = SubResource( 1 )
anims/open = ExtResource( 2 )
blend_times = [  ]

[node name="clickable_space" type="Button" parent="." index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -540.0
margin_top = -2400.0
margin_right = 540.0
margin_bottom = 2400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="window" type="Node2D" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )

[node name="non_clickable_space" type="Control" parent="window" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -400.0
margin_top = -411.0
margin_right = 400.0
margin_bottom = 514.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="background" type="Sprite" parent="window" index="1"]

scale = Vector2( 0.791763, 0.666224 )
texture = ExtResource( 3 )

[node name="message" type="RichTextLabel" parent="window" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -356.0
margin_top = -356.0
margin_right = 359.0
margin_bottom = 306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[center]All the game
data including
the current
board will be
deleted
[color=red]permanently[/color].
Continue?[/center]"
visible_characters = -1
percent_visible = 1.0
meta_underlined = true
tab_size = 4
text = "All the game
data including
the current
board will be
deleted
permanently.
Continue?"
scroll_active = true
scroll_following = false
selection_enabled = false
override_selected_font_color = false
_sections_unfolded = [ "Anchor", "BBCode", "Grow Direction", "Margin", "Rect", "custom_fonts", "custom_styles" ]

[node name="ok_button" type="TextureButton" parent="window" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 50.0
margin_top = 320.0
margin_right = 250.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
_sections_unfolded = [ "Rect" ]

[node name="cancel_button" type="TextureButton" parent="window" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -250.0
margin_top = 320.0
margin_right = -50.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]

[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]

[connection signal="pressed" from="clickable_space" to="." method="_on_clickable_space_pressed"]

[connection signal="pressed" from="window/ok_button" to="." method="_on_ok_button_pressed"]

[connection signal="pressed" from="window/cancel_button" to="." method="_on_cancel_button_pressed"]


